<<<<<<< HEAD:app/src/main/res/layout/activity_main.xml
<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textSelectProperties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_text"
                android:textColor="@color/colorText"
                android:theme="@style/myText"
                app:layout_constraintBottom_toTopOf="@id/switchLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="34dp"
                tools:layout_conversion_absoluteWidth="336dp" />

            <RelativeLayout
                android:id="@+id/switchLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/element_background_custom"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSelectProperties"
                tools:layout_conversion_absoluteHeight="148dp"
                tools:layout_conversion_absoluteWidth="336dp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="50dp">

                <Switch
                    android:id="@+id/cbLowerCharacter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:duplicateParentState="false"
                    android:text="@string/cb_lower_case"
                    android:theme="@style/mySwitch" />

                <Switch
                    android:id="@+id/cbUpperCharacter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbLowerCharacter"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/cb_upper_case"
                    android:theme="@style/mySwitch" />

                <Switch
                    android:id="@+id/cbNumbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbUpperCharacter"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/cb_numbers_text"
                    android:theme="@style/mySwitch" />

                <Switch
                    android:id="@+id/cbSpecial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbNumbers"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/cb_special_text"
                    android:theme="@style/mySwitch" />
            </RelativeLayout>

            <TextView
                android:id="@+id/setPwLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/set_password_length_text"
                android:textColor="@color/colorText"
                android:theme="@style/myText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switchLayout" />

            <SeekBar
                android:id="@+id/pwLengthSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/element_background_custom"
                android:max="95"
                android:theme="@style/mySwitch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setPwLength" />

            <TextView
                android:id="@+id/pwLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw_length"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/pwLengthSlider" />

            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_custom"
                android:onClick="clickHandler"
                android:text="@string/generate_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwLength" />

            <Button
                android:id="@+id/btnCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_custom"
                android:onClick="clickHandler"
                android:text="@string/copy_btn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwLength" />

            <TextView
                android:id="@+id/pwText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/element_background_custom"
                android:gravity="center_horizontal"
                android:hint="@string/pw_text_hint"
                android:padding="6dp"
                android:textColor="@color/colorEditText"
                android:textSize="22sp"
                android:fontFamily="@font/consola"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGenerate"
                android:visibility="invisible"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
=======
<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorEdit"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorText"
                android:theme="@style/myText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textPassword"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textColor="@color/colorText"
                android:theme="@style/myText"
                app:layout_constraintBottom_toTopOf="@id/switchLayout"
                app:layout_constraintTop_toBottomOf="@id/textName"
                app:layout_constraintStart_toStartOf="parent"/>

            <RelativeLayout
                android:id="@+id/switchLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPassword"
               >

                <Switch
                    android:id="@+id/cbLowerCharacter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:duplicateParentState="false"
                    android:text="@string/cb_lower_case"
                    android:theme="@style/mySwitch" />

                <Switch
                    android:id="@+id/cbUpperCharacter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbLowerCharacter"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/cb_upper_case"
                    android:theme="@style/mySwitch" />

                <Switch
                    android:id="@+id/cbNumbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbUpperCharacter"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/cb_numbers_text"
                    android:theme="@style/mySwitch" />

                <Switch
                    android:id="@+id/cbSpecial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbNumbers"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/cb_special_text"
                    android:theme="@style/mySwitch" />
            </RelativeLayout>

            <TextView
                android:id="@+id/setPwLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_password_length_text"
                android:textColor="@color/colorText"
                android:theme="@style/myText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/pwLengthSlider"
                app:layout_constraintTop_toBottomOf="@+id/switchLayout"
             />

            <SeekBar
                android:id="@+id/pwLengthSlider"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="95"
                android:theme="@style/mySwitch"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/setPwLength"
                app:layout_constraintTop_toBottomOf="@+id/switchLayout" />

            <TextView
                android:id="@+id/pwLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw_length"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/pwLengthSlider"
                app:layout_constraintTop_toBottomOf="@+id/switchLayout"
                />

            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_custom"
                android:onClick="clickHandler"
                android:text="@string/generate_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwLength" />

            <Button
                android:id="@+id/btnCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_custom"
                android:onClick="clickHandler"
                android:text="@string/copy_btn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwLength" />

            <TextView
                android:id="@+id/pwText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/element_background_custom"
                android:gravity="center_horizontal"
                android:hint="@string/pw_text_hint"
                android:padding="6dp"
                android:textColor="@color/colorEditText"
                android:textSize="22sp"
                android:fontFamily="@font/consola"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGenerate"
                android:visibility="invisible"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
>>>>>>> develop:app/src/main/res/layout/new_password.xml
